<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/header_count_portrait"
        android:key="header_count_portrait"
        android:defaultValue="6"
        app:minValue="2"
        app:maxValue="10"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/header_count_landscape"
        android:key="header_count_landscape"
        android:defaultValue="10"
        app:minValue="2"
        app:maxValue="18"
        />

    <Preference
        android:summary="@string/qqs_hint"
        android:enabled="false"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/qs_row_count_portrait"
        android:key="qs_row_count_portrait"
        android:defaultValue="3"
        app:minValue="2"
        app:maxValue="5"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/qs_row_count_landscape"
        android:key="qs_row_count_landscape"
        android:defaultValue="2"
        app:minValue="1"
        app:maxValue="4"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/qs_col_count_portrait"
        android:key="qs_col_count_portrait"
        android:defaultValue="5"
        app:minValue="2"
        app:maxValue="8"
        />

    <tk.zwander.seekbarpreference.SeekBarPreference
        android:title="@string/qs_col_count_landscape"
        android:key="qs_col_count_landscape"
        android:defaultValue="8"
        app:minValue="2"
        app:maxValue="15"
        />

    <Preference
        android:title="@string/qs_row_col_hint"
        android:enabled="false"
        />

    <SwitchPreference
        android:title="@string/hide_qs_tile_background"
        android:key="hide_qs_tile_background"
        />

</PreferenceScreen>